updated cromwell config file

--- a/cromwell/cromwell.config
+++ b/cromwell/cromwell.config
@@ -341,9 +341,13 @@ backend {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"                                                                                     
       config {
         
+        concurrent-job-limit = 50
+        max-concurrent-tasks = 16
+
         runtime-attributes = """
-        Int runtime_minutes = 120
-        Int cpu=5
+        Int runtime_minutes = 5
+        String partition="cpu_short,cpu_medium,cpu_long,cpu_dev"
+        Int cpu=1
         Int memory_mb=5000
         String? docker
       
@@ -356,9 +360,10 @@ backend {
               -D ${cwd} \
               -o ${out} \
               -e ${err} \
+              -p ${partition} \
               -t 0:${runtime_minutes} \
               ${"-c " + cpu} \
-              --mem-per-cpu=${memory_mb} \
+              --mem=${memory_mb} \
               --wrap "/bin/bash ${script}"
         """
 
@@ -390,8 +395,9 @@ backend {
               -o ${cwd}/execution/stdout \
               -e ${cwd}/execution/stderr \
               -t ${runtime_minutes} \
+              -p ${partition} \
               ${"-c " + cpu} \
-              --mem-per-cpu=${memory_mb} \
+              --mem=${memory_mb} \
               --wrap "module load singularity/3.9.8; singularity exec --bind ${cwd}:${docker_cwd} $IMAGE ${job_shell} ${docker_script}"
         """
         kill = "scancel ${job_id}"
